force-app/main/default/objects/Inventory_Item__c/Inventory_Item__c.object-meta.xml
<CustomObject>
    <description>Label changed to Item Master from Inventory Item</description>
    <label>Item Master</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>