force-app/main/default/objects/Inventory_Item__c/fields/Base_Store__c.field-meta.xml
<CustomField>
    <fullName>Base_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default Base Store (e.g. Roma Base Camp)</inlineHelpText>
    <label>Base Store</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipName>Inventory_Items</relationshipName>
    <type>Lookup</type>
</CustomField>