force-app/main/default/objects/Inventory_Item__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <label>Cost Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repairs and Maintenance</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>IT &amp; Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>