force-app/main/default/objects/Inventory_Item__c/fields/Cost_Price_formula__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_formula__c</fullName>
    <formula>IF(ISNULL( Cost_Price__c ), &quot;&quot;, &quot;$&quot; + IF(LEN(TEXT(FLOOR(Cost_Price__c))) &gt; 3, LEFT(TEXT(FLOOR(Cost_Price__c)), LEN(TEXT(FLOOR(Cost_Price__c))) - 3) + &quot;,&quot; + RIGHT(TEXT(FLOOR(Cost_Price__c)),3), TEXT(FLOOR(Cost_Price__c))) + &quot;.&quot; + LPAD(TEXT((Cost_Price__c -FLOOR(Cost_Price__c))*100),2,&quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Price</label>
    <type>Text</type>
</CustomField>