force-app/main/default/objects/Inventory_Item__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Cleaningproducts</fullName>
                <label>Cleaning Products</label>
            </value>
            <value>
                <fullName>Clothing_Merch</fullName>
                <label>Clothing/Merch</label>
            </value>
            <value>
                <fullName>Communications/Technology</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Fabrication</fullName>
            </value>
            <value>
                <fullName>Farming</fullName>
            </value>
            <value>
                <fullName>Food/Drinks</fullName>
            </value>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Managed items</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Oils_Lubericants</fullName>
                <label>Oils /Lubricants</label>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>PPE_Safety</fullName>
                <label>PPE/Safety</label>
            </value>
            <value>
                <fullName>Rig Equipment</fullName>
            </value>
            <value>
                <fullName>Stationary</fullName>
                <label>Stationary/Office</label>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Tyres</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>