force-app/main/default/objects/Inventory_Item__c/fields/Item_Notes__c.field-meta.xml
<CustomField>
    <fullName>Item_Notes__c</fullName>
    <label>Item Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>