force-app/main/default/objects/Inventory_Item__c/fields/Non_Searchable_Item__c.field-meta.xml
<CustomField>
    <fullName>Non_Searchable_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Searchable Item</label>
    <type>Checkbox</type>
</CustomField>