force-app/main/default/objects/Inventory_Item__c/fields/Old_SCODE__c.field-meta.xml
<CustomField>
    <fullName>Old_SCODE__c</fullName>
    <externalId>true</externalId>
    <label>Old SCODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>