force-app/main/default/objects/Inventory_Item__c/fields/Part_Category__c.field-meta.xml
<CustomField>
    <fullName>Part_Category__c</fullName>
    <label>Part Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filter - Oil</fullName>
            </value>
            <value>
                <fullName>Filter - Fuel</fullName>
            </value>
            <value>
                <fullName>Filter - Air</fullName>
            </value>
            <value>
                <fullName>Filter - Hydraulic</fullName>
            </value>
            <value>
                <fullName>Filter - Water</fullName>
            </value>
            <value>
                <fullName>Filter - Kits</fullName>
            </value>
            <value>
                <fullName>Filter - Other</fullName>
            </value>
            <value>
                <fullName>Filter – Separator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>