force-app/main/default/objects/Inventory_Item__c/fields/PR_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>PR_Price_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Price can be updated/overridden</inlineHelpText>
    <label>PR Price Override</label>
    <type>Checkbox</type>
</CustomField>