force-app/main/default/objects/Inventory_Item__c/fields/Preferred_Supplier_2nd__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Supplier_2nd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Supplier (2nd)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inventory_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>