force-app/main/default/objects/Inventory_Item__c/fields/Service_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Item</label>
    <type>Checkbox</type>
</CustomField>