force-app/main/default/objects/Inventory_Item__c/fields/Store_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Item_Code__c</fullName>
    <displayFormat>S{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Item Code</label>
    <type>AutoNumber</type>
</CustomField>