force-app/main/default/objects/Inventory_Item__c/listViews/Active_Items_with_no_Item_Category.listView-meta.xml
<ListView>
    <fullName>Active_Items_with_no_Item_Category</fullName>
    <columns>NAME</columns>
    <columns>Store_Item_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Item_Category__c</columns>
    <columns>Cost_Price__c</columns>
    <columns>Tax_Code__c</columns>
    <columns>Preferred_Supplier_1st__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Non_Searchable_Item__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Service_Item__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Item_Category__c</field>
        <operation>equals</operation>
    </filters>
    <label>Active Items with no Item Category</label>
    <sharedTo>
        <group>Purchasing</group>
    </sharedTo>
</ListView>