force-app/main/default/objects/Inventory_Item__c/listViews/All_Active_Items.listView-meta.xml
<ListView>
    <fullName>All_Active_Items</fullName>
    <columns>NAME</columns>
    <columns>Store_Item_Code__c</columns>
    <columns>Cost_Category__c</columns>
    <columns>Item_Category__c</columns>
    <columns>Cost_Price__c</columns>
    <columns>Tax_Code__c</columns>
    <columns>Preferred_Supplier_1st__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Supplier_Part_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Preferred_Supplier_1st__c</field>
        <operation>contains</operation>
        <value>DO NOT</value>
    </filters>
    <label>All Active Items</label>
</ListView>