force-app/main/default/objects/Inventory_Item__c/listViews/Copy_of_3rd_Party_Hire_Rig_30.listView-meta.xml
<ListView>
    <fullName>Copy_of_3rd_Party_Hire_Rig_30</fullName>
    <columns>Store_Item_Code__c</columns>
    <columns>NAME</columns>
    <columns>Supplier_Part_Number__c</columns>
    <columns>Base_Store__c</columns>
    <columns>Cost_Price__c</columns>
    <columns>Preferred_Supplier_1st__c</columns>
    <columns>Item_Notes__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Item_Category__c</field>
        <operation>equals</operation>
        <value>Hire</value>
    </filters>
    <filters>
        <field>Base_Store__c</field>
        <operation>equals</operation>
        <value>Rig 8</value>
    </filters>
    <label>3rd Party Hire | Rig 08</label>
</ListView>