force-app/main/default/objects/Inventory_Item__c/listViews/Copy_of_S03000_S03999.listView-meta.xml
<ListView>
    <fullName>Copy_of_S03000_S03999</fullName>
    <columns>Store_Item_Code__c</columns>
    <columns>NAME</columns>
    <columns>Supplier_Part_Number__c</columns>
    <columns>Active__c</columns>
    <columns>Item_Category__c</columns>
    <columns>Cost_Price__c</columns>
    <columns>Tax_Code__c</columns>
    <columns>Preferred_Supplier_1st__c</columns>
    <columns>Preferred_Supplier_2nd__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Non_Searchable_Item__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Store_Item_Code__c</field>
        <operation>lessThan</operation>
        <value>s04000</value>
    </filters>
    <filters>
        <field>Store_Item_Code__c</field>
        <operation>greaterOrEqual</operation>
        <value>s03000</value>
    </filters>
    <label>S03000-S03999</label>
</ListView>