force-app/main/default/objects/Inventory_Item__c/listViews/D_S_Items.listView-meta.xml
<ListView>
    <fullName>D_S_Items</fullName>
    <columns>NAME</columns>
    <columns>Supplier_Part_Number__c</columns>
    <columns>Cost_Price__c</columns>
    <columns>Tax_Code__c</columns>
    <columns>Store_Item_Code__c</columns>
    <columns>Preferred_Supplier_1st__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Non_Searchable_Item__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Preferred_Supplier_1st__c</field>
        <operation>contains</operation>
        <value>D &amp; S</value>
    </filters>
    <label>D&amp;S Items</label>
    <sharedTo>
        <group>Purchasing</group>
    </sharedTo>
</ListView>