force-app/main/default/objects/Inventory_Item__c/listViews/EDITABLE_VIEW.listView-meta.xml
<ListView>
    <fullName>EDITABLE_VIEW</fullName>
    <columns>NAME</columns>
    <columns>Preferred_Supplier_1st__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Preferred_Supplier_1st__c</field>
        <operation>equals</operation>
        <value>Napa Toowoomba</value>
    </filters>
    <label>EDITABLE VIEW</label>
</ListView>